--- a/readme/2.go文件归类.md
+++ b/readme/2.go文件归类.md
@@ -7,3 +7,15 @@
 - 测试源码文件:服务于以上两种源码文件，且以_test.go为后缀[后期有专题讲解]
 
 *注意：命令源码文件通常独立组织在一个包中，作为一个入口。*
+
+通常的结构如下：
+· $GOPATH
+  src
+   |--github.com
+		  |-astaxie
+			  |-beedb
+   pkg
+	|--相应平台
+		 |-github.com
+			   |--astaxie
+					|beedb.a ·
