--- a/readme/2.go文件归类.md
+++ b/readme/2.go文件归类.md
@@ -8,14 +8,46 @@
 
 *注意：命令源码文件通常独立组织在一个包中，作为一个入口。*
 
+
 通常的结构如下：
-· $GOPATH
-  src
-   |--github.com
-		  |-astaxie
-			  |-beedb
-   pkg
-	|--相应平台
-		 |-github.com
-			   |--astaxie
-					|beedb.a ·
+
+	$GOPATH
+	  src
+	    |--github.com
+			      |-astaxie
+				      |-beedb
+	  pkg
+						    |--相应平台
+			      |-github.com
+				      |--astaxie
+						        |beedb.a
+
+go get本质上可以理解为首先第一步是通过源码工具clone代码到src下面，
+### 然后执行`go install`
+
+通过上面建立的我本地的mygo的目录结构如下所示
+
+	bin/
+		  mathapp//.exe
+	pkg/
+				  darwin_amd64//平台linux_amd64
+			    mymath.a
+			  github.com/
+				    astaxie/
+					      beedb.a
+	src/
+		  mathapp
+			    main.go
+		  mymath/
+			    sqrt.go
+		  github.com/
+			    astaxie/
+					      beedb/
+						        beedb.go
+						        util.go
+
+从上面的结构我们可以很清晰的看到
+- bin目录下面存的是编译之后可执行的文件
+- pkg下面存放的是应用包
+- src下面保存的是应用源代码
+
