--- a/readme/3.常用命令.md
+++ b/readme/3.常用命令.md
@@ -16,9 +16,9 @@ array_linux.go array_darwin.go array_windows.go array_freebsd.go
 那么，go build的时候会选择性地编译以系统名结尾的文件（Linux、Darwin、Windows、Freebsd）。
 例如Linux系统下面编译只会选择array_linux.go文件，其它系统命名后缀文件全部忽略。
 
-*（注：实际上，package名在Go语言规范中指代码中“package”后使用的名称，此名称可以与文件夹名不同。__默认生成的可执行文件名是文件夹名__。）*
-*go build会忽略目录下以“_”或“.”开头的go文件。*
-*go build的编译参数。大家只要记住一个参数-v就好了，这个随时随地的可以查看底层的执行信息。*
+- *（注：实际上，package名在Go语言规范中指代码中“package”后使用的名称，此名称可以与文件夹名不同。__默认生成的可执行文件名是文件夹名__。）*
+- *go build会忽略目录下以“_”或“.”开头的go文件。*
+- *go build的编译参数。大家只要记住一个参数-v就好了，这个随时随地的可以查看底层的执行信息。*
 
 ## go get
 这个命令是用来动态获取远程代码包的。
