--- a/readme/4.2.语言基础.md
+++ b/readme/4.2.语言基础.md
@@ -7,3 +7,166 @@ const    fallthrough  if      range        type
 continue for          import  return       var
 ```
 
+## go知识列表
+- 基本数据类型
+- 流程和函数
+- struct
+- 面向对象
+- interface
+- 并发
+
+### 声明与初始化
+var s0 string               //只声明
+var s1 string = "ssss"      //全写，声明并初始化
+var s2 = "ssss"             //类型由值决定
+s3 := "ssss"                //`函数体内`简写法
+同类型技巧
+var vname1, vname2, vname3 string = v1, v2, v3
+var vname1, vname2, vname3 = v1, v2, v3
+vname1, vname2, vname3 := v1, v2, v3
+
+
+## 基本数据类型
+数据类型放在变量名后面。
+变量分为包变量、函数变量，其作用域不同。
+所有变量必须声明和初始化，而且保证在程序中被使用。
+与之对应的常量，不限类型、不强制使用。
+
+### bool类型
+在Go中，布尔值的类型为bool，值是true或false，默认为false。
+var isActive bool = false
+
+### 数值
+整数类型。Go同时支持int和uint即有无符号和带符号两种，这两种类型的长度相同，但具体长度取决于不同编译器的实现。
+Go里面也有直接定义好位数的类型：`rune`, `int8`, `int16`, `int32`, `int64`和`byte`, `uint8`, `uint16`, `uint32`, `uint64`。
+> 其中`rune`是`int32`的别称，`byte`是`uint8`的别称。
+> 注意：
+> - 这些类型的变量之间不允许互相赋值或操作，不然会在编译时引起编译器报错，都是整型也不例外！
+> - 类型int存在，但在go语言中并没有明确说明，有人说系统是64位，则int就是64位，表示测试不通过！在开发过程中，不要使用int即可。
+```Go
+var i1 int8 = 1
+var i2 int32 = 2
+i3 := i1 + i2
+```
+错误：invalid operation: i1 + i2 (mismatched types int8 and int32)
+
+### 浮点
+浮点数的类型有float32和float64两种（没有float类型），默认是float64。
+```Go
+var i1 float64 = 1
+var i2 float64 = 2.5
+i3 := i1 + i2
+```
+//3.500000
+
+### 字符串
+Go中的字符串string采用UTF-8字符集编码且用一对双引号（""）或反引号（``）括起来定义。
+```Go
+var s string = "Hello "
+	m := `World!`          //说明string类型，只有唯一一种类型
+	p := ` by    jorry`   //多选字符串，且保持原样输出<pre>！
+	smp := s + m + p
+fmt.Printf("%s\n", smp)
+```
+//Hello World! by    jorry
+
+### 常量
+常量一旦定义程序在运行时无法改变该值。在Go程序中，常量可定义为`数值`、`布尔值`或`字符串`等类型。
+```Go
+const Pi = 3.1415926
+const i = 10000
+const MaxThread = 10
+const prefix = "astaxie_"
+```
+> 注意：常量可以有多种类型，`因为常量不可变，所以其类型由值来决定最为完美`！
+> 当然，也是可以声明类型的，如：const Pi float64 = 3.1415926。
+> 另外，常量为了方便识别，`在驼峰命名基础之上首字母大写`。
+> 还有，Go常量对浮点位数实行自动剪切。
+
+
+### error
+相对特殊的error类型，错误类型来自专门的`errors`包
+```Go
+import "errors"
+err := errors.New("测试一个错误")
+	if err != nil {
+						  fmt.Print(err)
+	}
+```
+
+### 技巧
+多个常量、变量，或者导入多个包
+```Go
+import "fmt"
+import "os"
+const i = 100
+const pi = 3.1415
+const prefix = "Go_"
+var i int
+var pi float32
+var prefix string
+```
+可以写为：
+```Go
+import(
+	  "fmt"
+	  "os"
+)
+const(
+	  I = 100
+	  Pi = 3.1415
+	  Prefix = "Go_"
+)
+var(
+	  i int
+	  pi float32
+	  prefix string
+)
+```
+
+
+默认值细节：
+- bool类型默认值为false;
+- 整型不要直接使用int这个类型;
+- 浮点没有float类型，且默认值为float64;
+- Go常量对浮点位数实行自动剪切，比如：浮点位数为200位，若指定給float32自动缩短为32bit，指定给float64自动缩短为64bit;
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
