--- a/readme/4.2.语言基础.md
+++ b/readme/4.2.语言基础.md
@@ -24,11 +24,11 @@ s3 := "ssss"                //`函数体内`简写法
 ```
 同类型技巧
 ```Go
-var vname1, vname2, vname3 string = v1, v2, v3
-var vname1, vname2, vname3 = v1, v2, v3
-vname1, vname2, vname3 := v1, v2, v3
+var vname1, vname2, vname3 string               //统一声明
+var vname1, vname2, vname3 string = v1, v2, v3  //统一声明并初始化
+var vname1, vname2, vname3 = v1, v2, v3         //省略类型
+vname1, vname2, vname3 := v1, v2, v3            //:替换var
 ```
-
 
 ## 基本数据类型
 数据类型放在变量名后面。
@@ -89,7 +89,6 @@ const prefix = "astaxie_"
 > 另外，常量为了方便识别，`在驼峰命名基础之上首字母大写`。
 > 还有，Go常量对浮点位数实行自动剪切。
 
-
 ### error
 相对特殊的error类型，错误类型来自专门的`errors`包
 ```Go
@@ -129,7 +128,6 @@ var(
 	  prefix string
 )
 ```
-
 
 默认值细节：
 - bool类型默认值为false;
