--- a/readme/2.1.语言基础.md
+++ b/readme/2.1.语言基础.md
@@ -17,17 +17,17 @@ continue for          import  return       var
 
 ### 声明与初始化
 ```Go
-var s0 string               //只声明
-var s1 string = "ssss"      //全写，声明并初始化
-var s2 = "ssss"             //类型由值决定
-s3 := "ssss"                //`函数体内`简写法
+var s0 string               // 只声明
+var s1 string = "ssss"      // 全写，声明并初始化
+var s2 = "ssss"             // 类型由值决定
+s3 := "ssss"                // `函数体内`简写法
 ```
 同类型技巧
 ```Go
-var vname1, vname2, vname3 string               //统一声明
-var vname1, vname2, vname3 string = v1, v2, v3  //统一声明并初始化
-var vname1, vname2, vname3 = v1, v2, v3         //省略类型
-vname1, vname2, vname3 := v1, v2, v3            //:替换var
+var vname1, vname2, vname3 string               // 统一声明
+var vname1, vname2, vname3 string = v1, v2, v3  // 统一声明并初始化
+var vname1, vname2, vname3 = v1, v2, v3         // 省略类型
+vname1, vname2, vname3 := v1, v2, v3            // :替换var
 ```
 
 ## 基本数据类型
@@ -63,14 +63,14 @@ var i1 float64 = 1
 var i2 float64 = 2.5
 i3 := i1 + i2
 ```
-//3.500000
+// 3.500000
 
 ### 字符串
 Go中的字符串string采用UTF-8字符集编码且用一对双引号（""）或反引号（``）括起来定义。
 ```Go
 var s string = "Hello "
-	m := `World!`          //说明string类型，只有唯一一种类型
-	p := ` by    jorry`   //多选字符串，且保持原样输出<pre>！
+	m := `World!`          // 说明string类型，只有唯一一种类型
+	p := ` by    jorry`   // 多选字符串，且保持原样输出<pre>！
 	smp := s + m + p
 fmt.Printf("%s\n", smp)
 ```
@@ -136,10 +136,29 @@ var(
 - Go常量对浮点位数实行自动剪切，比如：浮点位数为200位，若指定給float32自动缩短为32bit，指定给float64自动缩短为64bit;
 
 
+### array数组
+```Go
+// 0.只声明
+var arr [2][4]int            //仅声明，所有数组元素自动填充对应类型的默认值，`因此数组只需声明并不强制初始化`
+// 1.声明并初始化覆盖
+var arr [3]int = [3]int{1, 2, 3}
+// 2.完整写法
+var arr [2][4]int
+	arr[0] = [4]int{1, 2, 3, 4}
+	arr[1] = [4]int{5, 6, 7}     //覆盖，所以可以缺少元素
+// 3.简化写法
+arr := [2][4]int16{[4]int16{2, 2, 2, 2}, [4]int16{2, 2, 2, 2}}
+// 4.极简写法
+arr := [2][4]int16{{2, 2, 2, 2}, {2, 2, 2, 2}}
+// 5.省略写法
+arr := [...]int{4, 5, 6, 7}     //长度由值决定
+```
+> - 注意：如果不使用:简写，则必须是先声明固定大小的数组类型，然后将数组初始化（强制多步编写）！
+	> - 初始化值的时候，可以缺少元素（声明时所有元素已经填充了对应类型的默认值，初始化时再覆盖这些值），但不能超长，`缺少的元素自动填充对应类型的默认值`。
+	> - Go数组极简，一个数组只能有一种基本类型，数组必须预先固定维度及大小且不可改变。
 
-
-
-
+### slice
+slice更像数组的一个辅助增强工具
 
 
 
