--- a/readme/2.1.语言基础.md
+++ b/readme/2.1.语言基础.md
@@ -100,7 +100,7 @@ err := errors.New("测试一个错误")
 ```
 
 ### 技巧
-多个常量、变量，或者导入多个包
+多个常量、变量，或者导入多个包（分组声明方式）
 ```Go
 import "fmt"
 import "os"
@@ -129,13 +129,6 @@ var(
 )
 ```
 
-默认值细节：
-- bool类型默认值为false;
-- 整型不要直接使用int这个类型;
-- 浮点没有float类型，且默认值为float64;
-- Go常量对浮点位数实行自动剪切，比如：浮点位数为200位，若指定給float32自动缩短为32bit，指定给float64自动缩短为64bit;
-
-
 ### array数组
 ```Go
 // 0.只声明
@@ -156,9 +149,62 @@ arr := [...]int{4, 5, 6, 7}     //长度由值决定
 > - 注意：如果不使用:简写，则必须是先声明固定大小的数组类型，然后将数组初始化（强制多步编写）！
 	> - 初始化值的时候，可以缺少元素（声明时所有元素已经填充了对应类型的默认值，初始化时再覆盖这些值），但不能超长，`缺少的元素自动填充对应类型的默认值`。
 	> - Go数组极简，一个数组只能有一种基本类型，数组必须预先固定维度及大小且不可改变。
+	> 长度值+类型 = 数组，这是数组的两个要素！
 
 ### slice
-slice更像数组的一个辅助增强工具
+> > 理解一下slice
+> slice更像数组的一个辅助增强工具
+> slice切片数据结构，没有长度且存储的永远是`对应类型值的引用`！
+> 既然是引用，那么它必须要有一个值的载体，数组就是slice的载体。如此，slice将以引用的特性自由灵活的操作数组了！！！
+> 通常，数组可以以任何形式直接赋值给slice，则slice将接过该数组的引用（同类型）。
+```Go
+// 声明一个slice，不限制长度，随时可用
+var slice1 []int
+```
+```Go
+// 声明并初始化slice（数组被隐藏）
+slice2 := []byte{'a', 'b', 'c', 'd'}
+```
+> 注意：以上声明初始化本质三步
+> 1.声明一个[]byte类型slice
+> 2.创建匿名数组[...]byte{'a', 'b', 'c', 'd'}
+> 3.将数组赋值给slice
+
+```Go
+// 声明并初始化一个含有10个元素元素，其类型为byte的数组
+var ar = [10]byte {'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j'}
+// 声明两个含有byte的slice
+var a, b, c, d, e []byte
+// a指向数组的第3个元素开始，并到第五个元素结束，
+a = ar[2:5]
+//现在a含有的元素: ar[2]、ar[3]和ar[4]
+// b是数组ar的另一个slice
+b = ar[3:5]
+// b的元素是：ar[3]和ar[4]
+c = ar[:5]
+d = ar[3:]
+e = ar[:]
+// n:m:p从n开始到m结束，长度为m-n，容量为p，剩余空间则为p-(m-n)
+```
+> 注意：以上slice被创建后都有个预设容量，但不固定
+> slice的容量，如果来自数组，由容量p到数组是底部大于或等于数组容量，同样，如果slice只来自声明，则容量为0
+
+对于slice有几个有用的内置函数：
+- len 获取slice的长度
+- cap 获取slice的最大容量
+- append 向slice里面追加一个或者多个元素，然后返回一个和slice一样类型的slice（在容量范围以内，超出容量则创建新数组，原数组不影响）
+- copy 函数copy从源slice的src中复制元素到目标dst，并且返回复制的元素的个数，重新开辟新的数组空间
+注：append函数会改变slice所引用的数组的内容，从而影响到引用同一数组的其它slice。 但当slice中没有剩余空间（即(cap-len) == 0）时，此时将动态分配新的数组空间。返回的slice数组指针将指向这个空间，而原数组的内容将保持不变；其它引用此数组的slice则不受影响。
+```Go
+var ar = [10]byte{'a', 'b', 'c', 'd', 'e', 'f', 'g', 'h', 'i', 'j'} //字符类型，即byte无符号整型uint8
+	testSlice1 := ar[:]
+	testSlice2 := ar[:5]    // testSlice1和testSlice2同时指向了ar的0~5的空间，容量为10-0=10，长度为5-0=5，则剩余容量为10-5=5！！！
+	// 以上剩余容量是无法访问的，__如果使用append拓展后，新的slice仍然确定的指向了ar的'f','g','h','i','j'__！！！！
+	testSlice3 := append(testSlice2, 'g', 'g')     //新的slice继续对剩余空间指向新的值，指向依旧跟随ar数组
+// 结果：testSlice1[7] === testSlice3[7] === ar[7]!!!!!!!!!!
+```
+
+### map
 
 
 
@@ -176,20 +222,16 @@ slice更像数组的一个辅助增强工具
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+### 零值
+所有变量都可以只声明，即声明之后自动填充默认值，且所有值都是零值：
+> int     0
+> int8    0
+> int32   0
+> int64   0
+> uint    0x0
+> rune    0 //rune的实际类型是 int32
+> byte    0x0 // byte的实际类型是 uint8
+> float32 0 //长度为 4 byte
+> float64 0 //长度为 8 byte
+> bool    false
+> string  ""
