--- a/readme/2.1.语言基础.md
+++ b/readme/2.1.语言基础.md
@@ -146,13 +146,13 @@ arr := [2][4]int16{{2, 2, 2, 2}, {2, 2, 2, 2}}
 // 5.省略写法
 arr := [...]int{4, 5, 6, 7}     //长度由值决定
 ```
-> - 注意：如果不使用:简写，则必须是先声明固定大小的数组类型，然后将数组初始化（强制多步编写）！
-	> - 初始化值的时候，可以缺少元素（声明时所有元素已经填充了对应类型的默认值，初始化时再覆盖这些值），但不能超长，`缺少的元素自动填充对应类型的默认值`。
-	> - Go数组极简，一个数组只能有一种基本类型，数组必须预先固定维度及大小且不可改变。
+> 注意：如果不使用:简写，则必须是先声明固定大小的数组类型，然后将数组初始化（强制多步编写）！
+	> 初始化值的时候，可以缺少元素（声明时所有元素已经填充了对应类型的默认值，初始化时再覆盖这些值），但不能超长，`缺少的元素自动填充对应类型的默认值`。
+	> Go数组极简，一个数组只能有一种基本类型，数组必须预先固定维度及大小且不可改变。
 	> 长度值+类型 = 数组，这是数组的两个要素！
 
 ### slice
-> > 理解一下slice
+> 理解一下slice
 > slice更像数组的一个辅助增强工具
 > slice切片数据结构，没有长度且存储的永远是`对应类型值的引用`！
 > 既然是引用，那么它必须要有一个值的载体，数组就是slice的载体。如此，slice将以引用的特性自由灵活的操作数组了！！！
@@ -160,8 +160,6 @@ arr := [...]int{4, 5, 6, 7}     //长度由值决定
 ```Go
 // 声明一个slice，不限制长度，随时可用
 var slice1 []int
-```
-```Go
 // 声明并初始化slice（数组被隐藏）
 slice2 := []byte{'a', 'b', 'c', 'd'}
 ```
@@ -231,7 +229,7 @@ if ok {
 //len(rating)
 
 ### make和new
-> > 重点：
+> 重点：
 > make用于内建类型（map、slice和channel）的内存分配。
 > new(T)分配了零值填充的T类型的内存空间，并且返回其地址，即一个*T类型的值。即它返回了一个指针，指向新分配的类型T的零值。
 > new用于各种类型的内存分配:基础数据类型、各种引用类型、结构类型、类类型等。
