--- a/readme/2.1.语言基础.md
+++ b/readme/2.1.语言基础.md
@@ -217,13 +217,13 @@ if ok {
  // ok表示是否，读取的元素是否存在
 }
 ```
-> > 使用map过程中需要注意的几点：
-> - map是无序的，每次打印出来的map都会不一样，它不能通过index获取，而必须通过key获取!
-> - map的长度是不固定的，也就是和slice一样，也是一种__引用类型__,获取每个元素同样是引用
-> - 内置的len函数同样适用于map，返回map拥有的key的数量
-> - map的值可以很方便的修改，通过numbers["one"]=11可以很容易的把key为one的字典值改为11
-> - __map和其他基本型别不同，它不是thread-safe，在多个go-routine存取时，必须使用mutex lock机制__
-> - map的初始化可以通过key:val的方式初始化值，同时map内置有判断是否存在key的方式（具体多返回值）
+- 使用map过程中需要注意的几点：
+- map是无序的，每次打印出来的map都会不一样，它不能通过index获取，而必须通过key获取!
+- map的长度是不固定的，也就是和slice一样，也是一种__引用类型__,获取每个元素同样是引用
+- 内置的len函数同样适用于map，返回map拥有的key的数量
+- map的值可以很方便的修改，通过numbers["one"]=11可以很容易的把key为one的字典值改为11
+- __map和其他基本型别不同，它不是thread-safe，在多个go-routine存取时，必须使用mutex lock机制__
+- map的初始化可以通过key:val的方式初始化值，同时map内置有判断是否存在key的方式（具体多返回值）
 
 //delete(rating, "C")  // 删除key为C的元素
 //len(rating)
@@ -236,14 +236,14 @@ if ok {
 
 ### 零值
 所有变量都可以只声明，即声明之后自动填充默认值，且所有值都是零值：
-> int     0
-> int8    0
-> int32   0
-> int64   0
-> uint    0x0
-> rune    0 //rune的实际类型是 int32
-> byte    0x0 // byte的实际类型是 uint8
-> float32 0 //长度为 4 byte
-> float64 0 //长度为 8 byte
-> bool    false
-> string  ""
+- int     0
+- int8    0
+- int32   0
+- int64   0
+- uint    0x0
+- rune    0 //rune的实际类型是 int32
+- byte    0x0 // byte的实际类型是 uint8
+- float32 0 //长度为 4 byte
+- float64 0 //长度为 8 byte
+- bool    false
+- string  ""
