--- a/readme/2.1.语言基础.md
+++ b/readme/2.1.语言基础.md
@@ -230,9 +230,9 @@ if ok {
 
 ### make和new
 > 重点：
-> make用于内建类型（map、slice和channel）的内存分配。
-> new(T)分配了零值填充的T类型的内存空间，并且返回其地址，即一个*T类型的值。即它返回了一个指针，指向新分配的类型T的零值。
-> new用于各种类型的内存分配:基础数据类型、各种引用类型、结构类型、类类型等。
+- make用于内建类型（map、slice和channel）的内存分配。
+- new(T)分配了零值填充的T类型的内存空间，并且返回其地址，即一个*T类型的值。即它返回了一个指针，指向新分配的类型T的零值。
+- new用于各种类型的内存分配:基础数据类型、各种引用类型、结构类型、类类型等。
 
 ### 零值
 所有变量都可以只声明，即声明之后自动填充默认值，且所有值都是零值：
